fix with overflow-y-hidden

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     align-items: center;
     row-gap: 161px;
     /* margin: 0 61px 0 61px; */
+    overflow-y: hidden;
 }
 
 .theme-icon {
@@ -53,7 +54,7 @@ body {
     color: var(--primary-text-color);
     font-size: var(--medium-font-size);
     font-weight: var(--semiBold-font-weight);
-    margin-top: 115px;
+    margin-top: 138px;
 }
 
 .score {
@@ -89,12 +90,11 @@ body {
 }
 
 .add {
-    margin-bottom: 24px;
+    margin-bottom: 34px;
 }
 
 .reset {
     font-size: var(--very-small-font-size);
-    display: none;
 }
 
 .reset .shape {
